--- a/lunchbox/.project
+++ b/lunchbox/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lunchbox_1.0</name>
+	<name>lunchbox</name>
 	<comment></comment>
 	<projects>
 	</projects>
