--- a/Web2thPJT/WebContent/WEB-INF/web.xml
+++ b/Web2thPJT/WebContent/WEB-INF/web.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>web06_boardMVC</display-name>
-  <servlet>
-    <servlet-name>BoardController</servlet-name>
-    <servlet-class>edu.kosta.controller.BoardController</servlet-class>
-    <init-param>
-      <param-name>boardConfig</param-name>
-      <param-value>C:\Users\1027\Desktop\web06_boardMVC\WebContent\WEB-INF</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BoardController</servlet-name>
-    <url-pattern>*.do</url-pattern>
-  </servlet-mapping>
-  <resource-ref>
-    <description>DBCP DB Test</description>
-    <res-ref-name>jdbc:BoardDB</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>web06_boardMVC</display-name>
+
+	<resource-ref>
+		<description>DBCP DB Test</description>
+		<res-ref-name>jdbc:BoardDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
 </web-app>
