--- a/lunchbox/.classpath
+++ b/lunchbox/.classpath
@@ -13,5 +13,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/1027/Desktop/web3/apache-tomcat-8.5.43/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/1027/Desktop/web3/apache-tomcat-8.5.43/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/1027/Desktop/web3/apache-tomcat-8.5.43/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/1027/Desktop/web3/apache-tomcat-8.5.43/lib/ojdbc8.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
