--- a/lunchbox/WebContent/WEB-INF/web.xml
+++ b/lunchbox/WebContent/WEB-INF/web.xml
@@ -22,4 +22,15 @@
 		<servlet-name>LunchBoxFrontController</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+	<!-- 에러페이지 처리-->
+	<error-page>
+    <error-code>404</error-code>
+    <location>/errorPage.jsp</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/errorPage.jsp</location>
+  </error-page>
+
 </web-app>
