--- a/lunchbox/WebContent/WEB-INF/web.xml
+++ b/lunchbox/WebContent/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>lunchbox</display-name>
   <resource-ref>    
       <description>Connection</description> 
       <res-ref-name>jdbc/OracleDB</res-ref-name> 
@@ -8,22 +9,27 @@
  </resource-ref>  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
 
 <servlet> 
     <servlet-name>BoardFrontController</servlet-name> 
     <servlet-class> lunchbox.controller.BoardFrontController</servlet-class> 
 </servlet> 
-<servlet-mapping> 
-    <servlet-name>BoardFrontController</servlet-name> 
-    <url-pattern>*.do</url-pattern> 
-</servlet-mapping> 
 
 <servlet> 
     <servlet-name>MemberFrontController</servlet-name> 
     <servlet-class> lunchbox.controller.MemberFrontController</servlet-class> 
 </servlet> 
 
+<servlet-mapping> 
+    <servlet-name>BoardFrontController</servlet-name> 
+    <url-pattern>*.bo</url-pattern> 
+</servlet-mapping> 
 
 <servlet-mapping> 
     <servlet-name>MemberFrontController </servlet-name> 
