--- a/lunchbox/WebContent/WEB-INF/web.xml
+++ b/lunchbox/WebContent/WEB-INF/web.xml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	version="3.1">
-	<display-name>web06_boardMVC</display-name>
-	<resource-ref>
-		<description>DBCP DB Test</description>
-		<res-ref-name>jdbc/OracleDB</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
+  <display-name>lunchbox</display-name>
+  <resource-ref>    
+      <description>Connection</description> 
+      <res-ref-name>jdbc/OracleDB</res-ref-name> 
+      <res-type>javax.sql.DataSource</res-type> 
+      <res-auth>Container</res-auth> 
+ </resource-ref>  
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+  </welcome-file-list>
 
-	<servlet>
-		<servlet-name>LunchBoxFrontController</servlet-name>
-		<servlet-class>lunchbox.controller.LunchBoxFrontController</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>LunchBoxFrontController</servlet-name>
-		<url-pattern>*.do</url-pattern>
-	</servlet-mapping>
-	
-	<!-- 에러페이지 처리-->
-	<error-page>
-    <error-code>404</error-code>
-    <location>/errorPage.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>500</error-code>
-    <location>/errorPage.jsp</location>
-  </error-page>
+<servlet> 
+    <servlet-name>BoardFrontController</servlet-name> 
+    <servlet-class> lunchbox.controller.BoardFrontController</servlet-class> 
+</servlet> 
+
+<servlet> 
+    <servlet-name>MemberFrontController</servlet-name> 
+    <servlet-class> lunchbox.controller.MemberFrontController</servlet-class> 
+</servlet> 
+
+<servlet-mapping> 
+    <servlet-name>BoardFrontController</servlet-name> 
+    <url-pattern>*.bo</url-pattern> 
+</servlet-mapping> 
+
+<servlet-mapping> 
+    <servlet-name>MemberFrontController </servlet-name> 
+    <url-pattern>*.me</url-pattern> 
+</servlet-mapping> 
 
 </web-app>
+  
